tests/specs/publish/invalid_import_esm_sh_suggestion/invalid_import_esm_sh_suggestion.out
Checking for slow types in the public API...
error[invalid-external-import]: invalid import to a non-JSR 'http' specifier
 --> [WILDCARD]mod.ts:1:8
  | 
1 | import "http://esm.sh/react-dom@18.2.0/server";
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the specifier
  | 
  = hint: replace this import with one from jsr or npm, or vendor the dependency into your package
  | 
1 | "npm:react-dom@18.2.0"
  | ---------------------- try this specifier
  | 

  info: the import was resolved to 'http://esm.sh/react-dom@18.2.0/server'
  info: this specifier is not allowed to be imported on jsr
  info: jsr only supports importing `jsr:`, `npm:`, and `data:` specifiers
  docs: https://jsr.io/go/invalid-external-import

error: Found 1 problem
